Clean up JMH code: fix deprecated APIs, remove redundant modifiers, fix indentation
Co-authored-by: sullis <30938+sullis@users.noreply.github.com>